syntax = "proto3";

package reservation;

option java_multiple_files = true;
option java_package = "com.hna.rest.air.reservation";
option java_outer_classname = "ReservationCheckProto";


service ReservationCheck {
    rpc reservationCheck (ReservationCheckRQ) returns (ReservationCheckRS) {
    }
}

message ReservationCheckRQ {
    string reservationCode = 1;
    string mobile = 2;
}

message ReservationCheckRS {
    string status = 1;
    string code = 2;
    string message = 3;
    string userSessionId = 4;
}